--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -172,8 +172,8 @@
         <div class="contactInfo">
           <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
           324 324 324 <br>
-          <iconify-icon inline icon="mdi:email"></iconify-icon>
-          info@bookshop.com <br>
+          <iconify-icon inline icon="mdi:email"></iconify-icon><a href="mailto:info@bookshop.com">
+            info@bookshop.com</a> <br>
           <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
           25, 08500 Vic, Barcelona<br>
           <iframe
