--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="main-section-heading">Editor's Pick</div>
+    <div class="main-section-heading"><iconify-icon inline icon="iconoir:suggestion"></iconify-icon> Editor's Pick</div>
     <div class="gallery">
       <div class="main-section-heading">
         <span id="caption"></span>
@@ -199,7 +199,7 @@
 
     <!-- ------------------------------------------end gallery--------------------------------------- -->
 
-    <div class="main-section-heading All-books">All Books</div>
+    <div class="main-section-heading All-books"><iconify-icon inline icon="ph:books-bold"></iconify-icon> All Books</div>
     <div class="shop-cards">
          
 
