--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -30,7 +30,8 @@
     </div>
 
 
-    <div class="main-section-heading"><iconify-icon inline icon="iconoir:suggestion"></iconify-icon> Editor's Pick</div>
+    <div class="main-section-heading"><iconify-icon inline
+        icon="iconoir:suggestion"></iconify-icon> Editor's Pick</div>
     <div class="gallery">
       <div class="main-section-heading">
         <span id="caption"></span>
@@ -40,7 +41,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp1.jpg" /></td>
+                <td><img src="../img/book/hp1.jpg" alt="hp1"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -58,7 +59,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp2.jpg" /></td>
+                <td><img src="../img/book/hp2.jpg" alt="hp2"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -76,7 +77,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp3.jpg" /></td>
+                <td><img src="../img/book/hp3.jpg" alt="hp3"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -94,7 +95,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp4.jpg" /></td>
+                <td><img src="../img/book/hp4.jpg" alt="hp4" ></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -112,7 +113,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp5.jpg" /></td>
+                <td><img src="../img/book/hp5.jpg" alt="hp5"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -130,7 +131,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp6.jpg" /></td>
+                <td><img src="../img/book/hp6.jpg" alt="hp6"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -152,7 +153,7 @@
             src="../img/book/hp1.jpg"
             onclick="currentSlide(1)"
             alt="The Woods"
-            />
+            >
         </div>
         <div class="column">
           <img
@@ -160,7 +161,7 @@
             src="../img/book/hp2.jpg"
             onclick="currentSlide(2)"
             alt="Cinque Terre"
-            />
+            >
         </div>
         <div class="column">
           <img
@@ -168,7 +169,7 @@
             src="../img/book/hp3.jpg"
             onclick="currentSlide(3)"
             alt="Mountains and fjords"
-            />
+            >
         </div>
         <div class="column">
           <img
@@ -176,7 +177,7 @@
             src="../img/book/hp4.jpg"
             onclick="currentSlide(4)"
             alt="Northern Lights"
-            />
+            >
         </div>
         <div class="column">
           <img
@@ -184,7 +185,7 @@
             src="../img/book/hp5.jpg"
             onclick="currentSlide(5)"
             alt="Nature and sunrise"
-            />
+            >
         </div>
         <div class="column">
           <img
@@ -192,16 +193,16 @@
             src="../img/book/hp6.jpg"
             onclick="currentSlide(6)"
             alt="Snowy Mountains"
-            />
+            >
         </div>
       </div> <br>
     </div>
 
-    <!-- ------------------------------------------end gallery--------------------------------------- -->
-
-    <div class="main-section-heading All-books"><iconify-icon inline icon="ph:books-bold"></iconify-icon> All Books</div>
+    <!-- *****************end gallery***************** -->
+    <div class="main-section-heading All-books"><iconify-icon inline
+        icon="ph:books-bold"></iconify-icon> All Books</div>
     <div class="shop-cards">
-         
+
 
       <div class="card">
         <img src="../img/book/hp1.jpg" alt="hp1">
@@ -243,7 +244,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1">
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -262,7 +263,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1">
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -282,7 +283,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1">
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -301,7 +302,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1">
+        <img src="../img/book/hp1.jpg" alt="hp1" >
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -319,9 +320,9 @@
           Buy Now
         </button>
       </div>
-      </div>
-
     </div>
+
+
 
     <!-- *********************FOOTER********************************* -->
     <footer>
