--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -133,7 +133,7 @@
         <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
         >Contact US
       </div>
-      <div class="ContactSECT ContactForm">
+      <div class="ContactSECT ContactForm">2
         <form>
           <label for="fname">First Name</label>
           <input
@@ -141,6 +141,7 @@
             id="fname"
             name="firstname"
             placeholder="Your name.."
+            pattern="[A-Za-z ]+" required
           >
 
           <label for="lname">Last Name</label>
@@ -149,6 +150,7 @@
             id="lname"
             name="lastname"
             placeholder="Your last name.."
+            pattern="[A-Za-z ]+" required
           >
 
           <label for="country">Country</label>
