--- a/src/index.html
+++ b/src/index.html
@@ -149,64 +149,62 @@
         <!-- ************************END ARTICLE************************* -->
         <!-- ++++++++++++++++++++++++++GENRE+++++++++++++++++++++++++-->
         <div id="genre">
-          <div class="main-section-heading"><iconify-icon inline
-              icon="carbon:categories"></iconify-icon> SEARCH BY GENRE</div>
-          <table class="genre">
-            <tbody>
-              <tr>
-                <td><a href="html/shop.html">Adventure</a></td>
-                <td><a href="html/shop.html">Comic Book</a></td>
-                <td><a href="html/shop.html">Fantasy</td>
-                </tr>
-                <tr>
-                  <td><a href="html/shop.html">Action</a></td>
-                  <td><a href="html/shop.html">Manga</a></td>
-                  <td><a href="html/shop.html">Historical Fiction</a></td>
-                </tr>
-                <tr>
-                  <td><a href="html/shop.html">Classics</a></td>
-                  <td><a href="html/shop.html">Mystery</a></td>
-                  <td><a href="html/shop.html">Non Fiction</a></td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="main-section-heading">
+            <iconify-icon inline icon="carbon:categories"></iconify-icon> SEARCH
+            BY GENRE
           </div>
-          <!-- ************************END GENRE************************* -->
+          <div class="genre-grid">
+            <div class="genre-cell">Adventure</div>
+            <div class="genre-cell">Comic Book</div>
+            <div class="genre-cell">Fantasy</div>
+            <div class="genre-cell">Action</div>
+            <div class="genre-cell">Manga</div>
+            <div class="genre-cell">Historical Fiction</div>
+            <div class="genre-cell">Classics</div>
+            <div class="genre-cell">Mystery</div>
+            <div class="genre-cell">Non Fiction</div>
+          </div>
         </div>
-        <!-- ************************END MAIN ************************* -->
+
+
+        <!-- ************************END GENRE************************* -->
       </div>
-      <!-- ************************END CONTENT************************ -->
+      <!-- ************************END MAIN ************************* -->
+    </div>
+    <!-- ************************END CONTENT************************ -->
 
-      <!-- *********************FOOTER********************************* -->
-      <footer>
-        <div class="foot-logo">
-          <img src="/src/img/logo.png" alt="">
+    <!-- *********************FOOTER********************************* -->
+    <footer>
+      <div class="foot-logo">
+        <img src="/src/img/logo.png" alt="">
+      </div>
+      <div class="foot-contact">
+        <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
+        324 324 324 <br>
+        <iconify-icon inline icon="mdi:email"></iconify-icon><a
+          href="mailto:info@bookshop.com">
+          info@bookshop.com</a> <br>
+
+        <address>
+          <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9">
+            <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de
+            Lleida, 25, 08500 Vic, Barcelona</a>
+        </address>
+
+        <div class="social-media">
+          <a href="http://www.twiiter.com"><iconify-icon icon="mdi:twitter"></iconify-icon></a>
+          <a href="http://www.facebook.com"><iconify-icon icon="mdi:facebook"></iconify-icon></a>
+          <a href="http://www.instagram.com"><iconify-icon
+              icon="mdi:instagram"></iconify-icon></a>
+          <a href="http://old.reddit.com"><iconify-icon icon="mdi:reddit"></iconify-icon></a>
         </div>
-        <div class="foot-contact">
-          <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
-          324 324 324 <br>
-          <iconify-icon inline icon="mdi:email"></iconify-icon><a
-            href="mailto:info@bookshop.com">
-            info@bookshop.com</a> <br>
+      </div>
+      </footer>
 
-          <address>
-            <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9">
-              <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de
-              Lleida, 25, 08500 Vic, Barcelona</a>
-          </address>
-
-          <div class="social-media">
-            <a href="http://www.twiiter.com"><iconify-icon icon="mdi:twitter"></iconify-icon></a>
-            <a href="http://www.facebook.com"><iconify-icon icon="mdi:facebook"></iconify-icon></a>
-            <a href="http://www.instagram.com"><iconify-icon
-                icon="mdi:instagram"></iconify-icon></a>
-            <a href="http://old.reddit.com"><iconify-icon icon="mdi:reddit"></iconify-icon></a>
-          </div>
-        </div>
-        <!-- <p>All Right Reserves</p> -->
-        <!-- *********************END FOOTER****************************** -->
-        <script src="js/carosel.js"></script>
-        <script
-          src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
-      </body>
-    </html>
+      <!-- <p>All Right Reserves</p> -->
+      <!-- *********************END FOOTER****************************** -->
+      <script src="js/carosel.js"></script>
+      <script
+        src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+    </body>
+  </html>
